# tetrika_test

./: .dockerignore  .gitignore  Dockerfile  README_DOC.md  beasts.csv  docker-compose.yml  pyproject.toml
task1/: solution.py  test_task1.py
task2/: run_scraper.py  solution.py  test_task2.py
task3/: solution.py  test_task3.py
